--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   glassmorphism: ^3.0.0
   flutter_neumorphic: ^3.2.0
+  font_awesome_flutter: ^10.2.1
 
 dev_dependencies:
   flutter_test:
