--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   glassmorphism: ^3.0.0
   flutter_neumorphic: ^3.2.0
   font_awesome_flutter: ^10.2.1
+  firebase_auth: ^3.10.0
+  firebase_core: ^1.23.0
 
 dev_dependencies:
   flutter_test:
