--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   font_awesome_flutter: ^10.2.1
   firebase_auth: ^3.10.0
   firebase_core: ^1.23.0
+  cloud_firestore: ^3.4.9
 
 dev_dependencies:
   flutter_test:
