--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   firebase_auth: ^3.10.0
   firebase_core: ^1.23.0
   cloud_firestore: ^3.4.9
+  circle_bottom_navigation_bar: ^1.0.0
 
 dev_dependencies:
   flutter_test:
