--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   firebase_core: ^1.23.0
   cloud_firestore: ^3.4.9
   circle_bottom_navigation_bar: ^1.0.0
+  url_launcher: ^6.1.6
 
 dev_dependencies:
   flutter_test:
