--- a/android/app/src/debug/AndroidManifest.xml
+++ b/android/app/src/debug/AndroidManifest.xml
@@ -10,7 +10,7 @@
   <!-- If your app checks for SMS support -->
   <intent>
     <action android:name="android.intent.action.VIEW" />
-    <data android:scheme="sms" />
+    <data android:scheme="https" />
   </intent>
   <!-- If your app checks for call support -->
   <intent>
