--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   flutter:
     sdk: flutter
   carousel_slider: ^4.1.1
+  pinch_zoom_release_unzoom: ^0.0.10
+
 
 
   # The following adds the Cupertino Icons font to your application.
